# Black_Pearl_v2.0

./: .gitignore  CMakeLists.txt  README.md  embedforge.yaml
App/: README.md
App/Inc/: README.md  app.h  app_config.h  app_extension.h  autodrive.h  autodrive_config.h  autodrive_internal.h  north_calib.h  ship_control.h  ship_control_internal.h  ship_protocol.h  ship_protocol_internal.h
App/Src/: README.md  app.c  app_ahrs_core.c  app_ahrs_poll.c  app_bringup.c  app_extension.c  app_internal.h  app_mag_event.c  app_state.c  autodrive.c  autodrive_cmd.c  autodrive_config.c  autodrive_control.c  autodrive_diag.c  autodrive_gps.c  autodrive_nav.c  autodrive_points.c  autodrive_poll.c  main.c  north_calib.c  ship_control.c  ship_control_core.c  ship_control_manual.c  ship_control_yaw.c  ship_protocol.c  ship_protocol_cmd.c  ship_protocol_event.c  ship_protocol_link.c  ship_protocol_parse.c  ship_protocol_points.c  ship_protocol_power.c  ship_protocol_state.c  ship_protocol_tx.c
BoardDevices/: README.md
BoardDevices/Inc/: README.md  board_console.h  board_gps.h  board_imu.h  board_lt8920.h  board_mag.h  board_motor.h  board_power.h  board_spi_ps.h  board_storage.h  board_wireless.h
BoardDevices/Src/: README.md  board_console.c  board_gps.c  board_imu.c  board_lt8920.c  board_mag.c  board_motor.c  board_power.c  board_sensor_bus.c  board_sensor_bus.h  board_spi_ps.c  board_storage.c  board_wireless.c
ChipDrivers/: README.md
ChipDrivers/Inc/: KCT8206.h  LT8920.h  QMC6309.h  QMI8658.h  README.md  gnss_nmea.h
ChipDrivers/Src/: KCT8206.c  LT8920.c  QMC6309.c  QMI8658.c  README.md  gnss_nmea.c
Components/: README.md
Components/Inc/: AHRS.h  Filter.h  HeadingEstimator.h  MagCompass.h  PID.h  README.md
Components/Src/: AHRS.c  Filter.c  MagCompass.c  PID.c  README.md
Drivers/: README.md
Drivers/Inc/: README.md  STC32G_ADC.h  STC32G_CAN.h  STC32G_Clock.h  STC32G_Compare.h  STC32G_DMA.h  STC32G_Delay.h  STC32G_EEPROM.h  STC32G_Exti.h  STC32G_GPIO.h  STC32G_I2C.h  STC32G_LCM.h  STC32G_LIN.h  STC32G_NVIC.h  STC32G_PWM.h  STC32G_RTC.h  STC32G_SPI.h  STC32G_Soft_I2C.h  STC32G_Soft_UART.h  STC32G_Switch.h  STC32G_Timer.h  STC32G_UART.h  STC32G_USART_LIN.h  STC32G_WDT.h
Drivers/Isr/: README.md  STC32G_ADC_Isr.c  STC32G_CAN_Isr.c  STC32G_Compare_Isr.c  STC32G_DMA_Isr.c  STC32G_Exti_Isr.c  STC32G_GPIO_Isr.c  STC32G_I2C_Isr.c  STC32G_LCM_Isr.c  STC32G_LIN_Isr.c  STC32G_PWM_Isr.c  STC32G_RTC_Isr.c  STC32G_SPI_Isr.c  STC32G_Timer_Isr.c  STC32G_UART_Isr.c
Drivers/Lib/: README.md
Drivers/Src/: README.md  STC32G_ADC.c  STC32G_CAN.c  STC32G_Clock.c  STC32G_Compare.c  STC32G_DMA.c  STC32G_Delay.c  STC32G_EEPROM.c  STC32G_Exti.c  STC32G_GPIO.c  STC32G_I2C.c  STC32G_LCM.c  STC32G_LIN.c  STC32G_NVIC.c  STC32G_PWM.c  STC32G_RTC.c  STC32G_SPI.c  STC32G_Soft_I2C.c  STC32G_Soft_UART.c  (+4 more)
McuAbstraction/: README.md
Platform/: README.md
RVMDK/: README.md  STC32G-LIB.uvproj
Services/: README.md
Startup/: README.md
doc/: CHANGELOG.md  README.md  data.md  persistent_goal.md  state_machines.md  total.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  README.md  graph.html  graph.json  manifest.json
need to do/: README.md
ship_log_viewer/: README.md  ship_log_viewer.html  start_ship_log_viewer.py
tools/: README.md  gen_board_resources.py
(+107 files in other folders)
